# axisem

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  HISTORY  Makefile.TEMPLATE  README  README.md  copytemplates.sh  make_axisem.macros  make_axisem.macros.TEMPLATE  make_axisem.macros_coverage.TEMPLATE  make_axisem.macros_release.TEMPLATE  remove_all_git_dirs.sh  submit.py
MANUAL/: CMTSOLUTION.fig  automated_testing.tex  googleearth_src_rec.fig  inparam.fig  inparam.fig.bak  inparam_hetero.fig  inparam_mesh.fig  inparam_mesh.fig.bak  manual_axisem1.0.aux  manual_axisem1.0.tex  manual_axisem1.0.toc  manual_axisem1.1.tex  manual_axisem1.2.tex  manual_axisem1.3.tex  manual_axisem1.4.tex  mesh_vp_fig.fig  param_post_processing.fig  param_snaps.fig  pyaxi_input.tex  run_on_Euler.md  snap_cover_red.fig  snap_cover_red.fig.bak  sourceparams.fig  sourceparams.fig.bak
MANUAL/AXISEM_TUTORIAL/: AXISEMTutorial.aux  AXISEMTutorial.tex  AXISEMTutorial.tex.backup
MESHER/: ._background_models.f90  ._model_discontinuities.f90  EnceladusZbLowVUpper30kmMantle53km0WtPctMgSO4.bm  Makefile  Makefile.TEMPLATE  Moon_Weber2011.bm  analytic_mapping.f90  analytic_mapping.mod  analytic_semi_mapping.f90  analytic_semi_mapping.mod  analytic_spheroid_mapping.f90  analytic_spheroid_mapping.mod  background_models.F90  background_models.f90  background_models.mod  copymesh  data_bkgrdmodel.f90  data_bkgrdmodel.mod  data_coarse.f90  data_coarse.mod  data_diag.f90  data_diag.mod  data_gllmesh.f90  data_gllmesh.mod  data_grid.f90  data_grid.mod  data_mesh.f90  data_mesh.mod  data_numbering.f90  data_numbering.mod  data_pdb.f90  data_pdb.mod  data_spec.f90  data_spec.mod  data_time.f90  discont_meshing.f90  discont_meshing.mod  external_model.TEMPLATE  gllmeshgen.f90  gllmeshgen.mod  (+35 more)
MESHER/Models/: Venus.bm  (+9 more)
SOLVER/: ._background_models.f90  ._data_heterogeneous.f90  ._data_mesh.f90  ._get_model.f90  ._parameters.f90  ._rotations.f90  CMTSOLUTION  CMTSOLUTION.TEMPLATE  CMakeLists.txt  LIZ_CODE.tgz  Makefile.TEMPLATE  STATIONS.TEMPLATE  analyt_homog_radiation.f90  analytic_mapping.f90  analytic_semi_mapping.f90  analytic_spheroid_mapping.f90  apply_masks.f90  attenuation.f90  background_models.F90  background_models.f90  clocks.f90  commpi.F90  commpi.f90  commun.F90  commun.f90  copytemplates.sh  data_comm.f90  data_dipole.f90  data_heterogeneous.f90  data_io.f90  data_matr.f90  data_mesh.f90  data_mesh_preloop.f90  data_monopole.f90  data_numbering.f90  data_pointwise.f90  data_proc.f90  data_quadrupole.f90  data_source.f90  data_spec.f90  (+64 more)
TESTING/: PyAxi.py  inpython.cfg  inpython.cfg.TEMPLATE  inpython.cfg_NEW_VERSION  submit.py  test_aakash.sh  test_axisem.py  test_debug.sh  test_external.sh  test_internal.sh  test_mesher.py  test_mesher.sh  test_nightly_axisem.py
TRAVIS/: inparam_mesh_external_template  install_fftw.sh  install_mpi.sh  install_netcdf.sh  test_mesher.sh
cmake/: FindOpenMP_Fortran.cmake  ctest_calc_nprocs.py  ctest_check_results.py  ctest_move_mesh.csh  ctest_parse_params.py  ctest_post_proc.csh  ctest_prepare_ppp.py
(+115 files in other folders)
