CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (AxiSEM)
ENABLE_LANGUAGE (Fortran)

# Add a module search path for custom modules
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/)

# Enable testing
#INCLUDE (CTest)

SET(AXISEM_SOURCE_DIR ${CMAKE_SOURCE_DIR})

# Find MPI installation
FIND_PACKAGE(MPI)
IF(DEFINED MPI_Fortran_FOUND)
    ADD_DEFINITIONS(${MPI_Fortran_COMPILE_FLAGS})
    INCLUDE_DIRECTORIES(${MPI_Fortran_INCLUDE_PATH})
ENDIF(DEFINED MPI_Fortran_FOUND)

# Determine if compiler supports OpenMP
FIND_PACKAGE(OpenMP_Fortran)

# Check if NetCDF for Fortran90 is installed
SET (NETCDF_F90 "YES")
FIND_PACKAGE(NetCDF)
IF (NETCDF_FOUND)
    INCLUDE_DIRECTORIES(${NETCDF_INCLUDES})
ENDIF (NETCDF_FOUND)

ADD_SUBDIRECTORY("MESHER")
ADD_SUBDIRECTORY("SOLVER")

